--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   
-  <link rel="stylesheet" href="./css/global.css">
-  <script src="./js/global.js" defer></script>
-  <script src="./js/translation.js" defer></script>
+  <link rel="stylesheet" href="./CSS/global.css">
+  <script src="./JS/global.js" defer></script>
+  <script src="./JS/translation.js" defer></script>
 </head>
 
 <body>
